# lca_ecodesign_course

./: .gitignore  01_aircraft_lca.ipynb  02_drone_ecodesign.ipynb  README.md  projet_certificat_2023-student.ipynb  projet_certificat_2023.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: 01_aircraft_lca-checkpoint.ipynb  02_drone_ecodesign-checkpoint.ipynb  config-checkpoint.env  example-notebook-checkpoint.ipynb  lca_methods-checkpoint.csv  projet_certificat_2023-checkpoint.ipynb
classes/: presentation_lca_drone_2023.pptx
laboratories/: 00_Introduction.ipynb  01_aircraft_lca.ipynb  02_drone_ecodesign.ipynb
laboratories/assets/: bw_setup.py  drone_sizing.py  helpers.py
laboratories/assets/models/: aircraft_lca_model.ipynb  db_aircraft.bw2  db_drone.bw2  drone_lca_model.ipynb  helpers.py
supporting_data/: aircraft_lca_model.ipynb  db_aircraft.bw2  db_drone.bw2  drone_lca_model.ipynb  lca_activities.html
supporting_data/.ipynb_checkpoints/: aircraft_lca_model-checkpoint.ipynb  drone_lca_model-checkpoint.ipynb  drone_sizing-checkpoint.py  helpers-checkpoint.py  lca_activities-checkpoint.html
