[tool.poetry]
name = "lca_course"
version = "0.0.0"
description = "Parametric LCA"
authors = [
    "Félix POLLET <felix.pollet@isae-supaero.fr>",
    "Scott DELBECQ <scott.delbecq@isae-supaero.fr>",
    "Marc BUDINGER <marc.budinger@insa-toulouse.fr>"
]

license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
# IMPORTANT: when modifying this list, docs/requirements.txt must be updated for
# ReadTheDocs to be able to compile the documentation.
# A pre-commit hook has been added to do this task. As a result, any modification
# of poetry.lock file will modify docs/requirements.txt and make
# the commit fail because "files were modified by this hook". In that case,
# doing again the commit including changes in docs/requirements.txt will succeed.
python = ">=3.10, <3.11"
#matplotlib = "^3.6.2"
#numpy = "1.23.5"
#brightway2 = "^2.3"
#bw2io = "0.8.8"  # compatibility with ecoinvent >3.9 only. For ecoinvent 3.8, switch to 0.8.7
lca-algebraic-dev = "^1.0.5"
networkx = "*"
pyvis = "*"
#scipy = "1.8.0"
jupyterlab = "^3.3.0"
jupyter-client = "!=7.0.0, !=7.0.1, !=7.0.2, !=7.0.3, !=7.0.4, !=7.0.5"
notebook = "^6.0"
jupyterlab_myst = "*"


[tool.poetry.extras]
jupyterlab = ["jupyterlab"]

[tool.black]
line-length = 100

# For installing with 'poetry install' command.
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# For installing with 'pip install -e .' command.
#[build-system]
#requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"